Remove a few unnecessary guava usages (#100)